Update WireMockUtils test fixture.